[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ReProv"
version = "0.1.0"
description = "Python SDK for ReProv API"
authors = [
    { name = "Antonis Ganios", email = "ant.ganios@iit.demokritos.gr" }
]

[tool.setuptools.packages.find]
where = ["ReProv"]